fix: Increased Warmup for JIT in Benchmark